# instrew

./: meson.build
server/: rewriteserver.cc
static-client/: elf-loader.cc  elf-loader.h  factorial.S  libc-extra.cc  libc-extra.h  main.cc  meson.build  translator.cc  translator.h
